Staged changes commited files

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,11 +1,10 @@
 {
   "CursosstoreDatabaseSettings": {
     "CursosCollectionName": "Cursos",
-    "ConnectionString": "mongodb://localhost:27017",
+    "ConnectionString": "mongodb+srv://bluewaterUser:bwUs3r2021@cluster0.m9m8t.mongodb.net/CursosDb",
     "DatabaseName": "CursosDb"
   },
   "Logging": {
-    //"IncludeScopes": false,
     "Debug": {
       "LogLevel": {
         "Default": "Warning"
