--- a/appsettings.json
+++ b/appsettings.json
@@ -1,7 +1,7 @@
 {
   "CursosstoreDatabaseSettings": {
     "CursosCollectionName": "Cursos",
-    "ConnectionString": "mongodb+srv://bluewaterUser:bwUs3r2021@cluster0.m9m8t.mongodb.net/CursosDb",
+    "ConnectionString": "mongodb+srv://cluster0.m9m8t.mongodb.net/CursosDb",
     "DatabaseName": "CursosDb"
   },
   "Logging": {
